# AdvancedProgramming

./: CMakeLists.txt  README.md  part1_Serafino_Sara_SM3400292.md  part1_Serafino_Sara_SM3400292.md.md  setup.py
Exam project/: README.md  setup.py
Exam project/OptimisationModule/include/: GradientDescent.tpl.hpp  Optimisation.hpp
Exam project/OptimisationModule/src/: Optimisation.cpp  Optimisation_py.cpp
Exam project/main/: main.py
Exam projects/: README.md
Exam projects/GradientDescent/OptimisationModule/include/: GradientDescent.hpp  GradientDescent.tpl.hpp
Exam projects/GradientDescent/main/: main.py
Exam projects/Thomas Algorithm for heat diffusion problem/: CMakeLists.txt  HeatDiffusion.cpp  Matrix_py.cpp  README.md  setup.py
Exam projects/Thomas Algorithm for heat diffusion problem/main/: main.py  prova.py
MatrixModule/include/: HeatDiffusion.hpp  Matrix.hpp
MatrixModule/src/: HeatDiffusion.cpp  Matrix.cpp  Matrix.py  Matrix_py.cpp
NumericalIntegrationModule/include/: IntegrationMethods.hpp  moduleCfunctions.hpp  moduleCfunctions.tpl.hpp
NumericalIntegrationModule/src/: IntegrationMethods.cpp
OptimisationModule/include/: GradientDescent.hpp  GradientDescent.tpl.hpp  Optimisation.hpp
OptimisationModule/src/: Optimisation.cpp  Optimisation.py  Optimisation_py.cpp
StatisticsModule/include/: DataHandler.hpp  StatOp.hpp
StatisticsModule/src/: DataHandler.cpp  DataHandler_py.cpp  StatOp.cpp
lab exercises/: simulation1&2 part1.md
lab exercises/lab01/: backup.sh
lab exercises/lab02/: hello_world.cpp  mm_ex.cpp  my_program  temperature_converter.cpp
lab exercises/lab02/ex3lab2/: build.sh  main  main.cpp  statistics.cpp
lab exercises/lab02/ex4lab2/: build.sh  data.cpp  data.hpp  display.cpp  display.hpp  main  main.cpp  student.hpp
lab exercises/lab02/ex5lab2/: build.sh
lab exercises/lab03/: data_processor.cpp  data_processor.hpp  lecture3.cpp  main.cpp
lab exercises/lab04/: ex1.cpp  lecture4.cpp  my_program
lab exercises/lab04/ex2/: DataSource.cpp  DataSource.hpp  DataTransformer.cpp  DataTransformer.hpp  main.cpp
lab exercises/lab05/: ex1.cpp  ex2.cpp  ex4.cpp  lecture5.cpp  my_program
lab exercises/lab05/ex3/: main.cpp  newton.cpp  newton.hpp
lab exercises/lab06/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex5_output.txt  ex6.cpp  lecture7.cpp
lab exercises/lab08/ex1/ex1/: CMakeLists.txt
lab exercises/lab08/ex1/ex1/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
lab exercises/lab08/ex1/ex3/: CMakeLists.txt
lab exercises/lab09/: ex3.ipynb
lab exercises/lab09/.ipynb_checkpoints/: ex1-checkpoint.ipynb  ex2-checkpoint.ipynb
lab exercises/lab10/: ex1.py  ex2.py  lecture11.py
lab exercises/lab11/: ex1.ipynb  ex2.1.ipynb  ex2.3.ipynb  ex3.1.ipynb  ex3.2.ipynb  ex3.3.ipynb  sales_data.csv  weather_data.csv
lab exercises/lab11/.ipynb_checkpoints/: ex2.2-checkpoint.ipynb  ex3.2-checkpoint.ipynb
lab exercises/lab12/: wish  wish.cpp
lab exercises/lab12/ex1/: data_processor.cpp
lab exercises/lab12/ex3/: setup.py
lab exercises/lect13/06_class-numpy-eigen/: setup.py
main/: main.cpp  main.py  mainA.py  mainC.py
(+14 files in other folders)
